# ynab-converter

./: .gitignore  Cargo.toml
binaries/linux/: ynab-converter
scripts/: build.sh
src/: main.rs
src/amex/: mod.rs  transaction.rs
src/csv/: mod.rs
src/handelsbanken/: mod.rs  parserpicker.rs  table.rs  xlsparser.rs  xlsxparser.rs
src/nordea/: csvparser.rs  mod.rs  transaction.rs
src/util/: mod.rs  swedish_float.rs
src/ynab/: convertible.rs  csv.rs  mod.rs  parser.rs  transaction.rs
src/ynab/client/: mod.rs  schema.rs
testfiles/: amex-test-input-small.csv  amex-test-input-smallest.csv  amex-test-input.csv  handelsbanken-input.xls  handelsbanken-input.xlsx  handelsbanken-prel-input.xls  input-2024.csv  nordea-reserverat.csv  nordea-test-input.csv  ynab-unit-test-output.csv
