[package]
name = "ynab-converter"
version = "1.0.0"
edition = "2021"
description = "A CLI for converting bank transactions to CSV format needed for YNAB imports"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.37", features = ["serde"] }
anyhow = "1.0.81"
html_parser = "0.7.0"
itertools = "0.12.1"
calamine = "0.25.0"
